# policy_training

qwen2.5_model/: ATTESTATION_TRAINING_GUIDE.md  ATTESTATION_TRAINING_PLAN.md  AUGMENTATION_GUIDE.md  CONTEXT_PLAN.md  DATASET_INFO.md  DATASET_REVIEW.md  FIXES_APPLIED.md  README.md  RECOMMENDATION.md  REGAL_RULES_REFERENCE.md  SETUP.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md  UV_SETUP.md  attestation_dataset_summary.json  attestation_eval.jsonl  attestation_train.jsonl  augment_dataset.py  context_extractor.py  dataset_summary.json  eval.jsonl  generate_attestation_dataset.py  generate_dataset.py  infer_policy.py  inference_helper.py  library_indexer.py  library_mapper.py  logging_setup.py  pyproject.toml  quick_augment.sh  rego_validator.py  requirements.txt  smart_context_builder.py  test_context_system.py  train.jsonl  train_policy.ipynb  train_policy.py  validate_and_improve_dataset.py
